--- a/views/MercadoLiebre.html
+++ b/views/MercadoLiebre.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <section id="configHeader">
+        <section id="headerTop">
             <figure id="logo">
                 <a href="/">
                     <img src="/images/LogoMercadoLiebre.svg" alt="Logo mercado liebre">
