--- a/public/css/1header.css
+++ b/public/css/1header.css
@@ -4,11 +4,11 @@ header {
     background-color: var(--Amarillo);
 }
 
-#logo{
+#logo {
     width: 50%;
 }
 
-#headerTop{
+#configHeader {
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -29,25 +29,25 @@ header {
     padding-bottom: 1rem;
 }
 
-.lupa{
+.configLupa {
     background-color: white;
 }
 
-.cuotas{
+.cuotas {
     width: 100%;
     padding: 1rem;
     text-align: center;
 }
 
-.cuotas p{
+.cuotas p {
     font-size: 12px;
 }
 
-.cuotas div{
+.cuotas div {
     display: inline;
 }
 
-.searchBar {
+.contenedor__buscador {
     background-color: white;
     width: 50%;
     align-self: center;
@@ -55,7 +55,7 @@ header {
     border-radius: 4px;
 }
 
-.searchBar form {
+.contenedor__buscador form {
     justify-content: space-between;
     width: 100%;
     display: flex;
@@ -63,15 +63,15 @@ header {
     margin: 0.5rem;
 }
 
-.searchBar input{
+.contenedor__buscador input {
     width: 100%
 }
 
-#homeBanner img{
+#BannerOfertas img {
     width: 100vw;
 }
 
-.navBar{
+.Confignav {
     display: none;
 }
 
@@ -81,50 +81,45 @@ header {
 
 /* Media Tablet */
 @media (min-width: 361px) {
-#logo{
-    width: 30%;
+    #logo {
+        width: 30%;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .contenedor__buscador {
+        width: 30%;
+    }
+
+    .cuotas {
+        width: 30%;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+    }
+
+
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-bottom: 1.5rem;
+        width: 100vw;
+    }
+
+    .Confignav {
+        width: 40%;
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+        font-size: 12px;
+    }
 }
 
-.burger-menu{
-    display: none;
-}
-
-.searchBar{
-    width: 30%;
-}
-
-.cuotas{
-    width: 30%;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    font-size: 16px; 
-}
-
-
-nav{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-bottom: 1.5rem;
-    width: 100vw;
-}
-
-.navBar{
-    width: 40%;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    font-size: 12px;
-}
-}
-
-/* ------------------ */
-
-/* Media Desktop */
+/* desktop */
 @media (min-width: 769px) {
 
-
 }
-
-/* ------------------ */
